--- a/k8s/base/deployment-4.yaml
+++ b/k8s/base/deployment-4.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: helloworld-deployment-3
+  name: helloworld-deployment-4
 spec:
   strategy:
     type: RollingUpdate
@@ -10,12 +10,12 @@ spec:
       maxUnavailable: 50%
   selector:
     matchLabels:
-      app.kubernetes.io/name: helloworld-deployment-3
+      app.kubernetes.io/name: helloworld-deployment-4
   replicas: 2
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: helloworld-deployment-3
+        app.kubernetes.io/name: helloworld-deployment-4
     spec:
       volumes:
         - name: www-content
@@ -43,12 +43,13 @@ spec:
             - bash
             - -c
             - |
-              git clone https://github.com/gambinodaniele/k8s-sidecars.git /www
-              cd /www
+              git clone https://github.com/gambinodaniele/k8s-sidecars.git /www2
+              cd /www2
               while true; do
                 date
                 git pull
                 ls -al
+                cp -p ./docker/www/* /www
                 sleep 60
               done
           resources:
