--- a/k8s/base/service.yaml
+++ b/k8s/base/service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: my-nginx
 spec:
-  # type: NodePort
+  type: LoadBalancer
   ports:
     - name: http
       port: 8080
